# rpmalloc-rs

./: .gitmodules  Cargo.toml  README.md
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
rpmalloc-sys/: Cargo.toml  README.md  build.rs
rpmalloc-sys/src/: lib.rs  tests.rs
src/: lib.rs
tests/: global.rs
