[package]
name = "rpmalloc"
version = "0.1.0"
description = ""
authors = ["Embark <opensource@embark-studios.com>", "Johan Andersson <repi@repi.se>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/EmbarkStudios/rpmalloc-rs"
edition = "2018"
keywords = ["allocator", "rpmalloc"]
categories = ["memory-management", "api-bindings"]

[workspace]
members = [
  "rpmalloc-sys",
]

[lib]
doctest = false
test = false

[dependencies]
rpmalloc-sys = { version = "0.1.0", path = "rpmalloc-sys" }