[package]
name = "rpmalloc-sys"
version = "0.1.0"
description = ""
authors = ["Embark <opensource@embark-studios.com>", "Johan Andersson <repi@repi.se>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/EmbarkStudios/rpmalloc-rs"
edition = "2018"
build = "build.rs"
keywords = ["allocator", "rpmalloc"]
categories = ["memory-management", "external-ffi-bindings"]
workspace = ".."

[dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "0.3.14"
cc = "1"