[package]
name = "rpmalloc-sys"
version = "0.1.2"
description = "Unsafe FFI bindings to rpmalloc C library"
authors = ["Embark <opensource@embark-studios.com>", "Johan Andersson <repi@repi.se>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/EmbarkStudios/rpmalloc-rs"
edition = "2018"
build = "build.rs"
keywords = ["allocator", "rpmalloc"]
categories = ["memory-management", "external-ffi-bindings"]
readme = "README.md"
workspace = ".."

[dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "0.3.14"
cc = "1"

[features]
default = []
preload = []                    # Compile with ENABLE_PRELOAD=1
statistics = []                 # Compile with ENABLE_STATISTICS=1
validate_args = []              # Compile with ENABLE_VALIDATE_ARGS=1
asserts = []                    # Compile with ENABLE_ASSERTS=1
guards = []                     # Compile with ENABLE_GUARDS=1
unlimited_cache = []            # Compile with ENABLE_UNLIMITED_CACHE=1
unlimited_global_cache = []     # Compile with ENABLE_UNLIMITED_GLOBAL_CACHE=1
unlimited_thread_cache = []     # Compile with ENABLE_UNLIMITED_THREAD_CACHE=1
global_cache = []               # Compile with ENABLE_GLOBAL_CACHE=1
thread_cache = []               # Compile with ENABLE_THREAD_CACHE=1
adaptive_thread_cache = []      # Compile with ENABLE_ADAPTIVE_THREAD_CACHE=1